<resources>
    <string name="app_name">VNOMobile</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="identify">Identify</string>
    <string name="create_account">Create account</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="list_of_servers">List of servers</string>
    <string name="ip_string">IP:</string>
    <string name="port_string">Port:</string>
    <string name="pick_client_data_directory">Pick client data directory</string>
    <string name="path">Path</string>
    <string name="client_name">Client name</string>
    <string name="character_password">Character password</string>
    <string name="Pick">Pick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message...</string>
    <string name="send">Send</string>
    <string name="favourites">Favourites</string>
    <string name="scene">Scene</string>
    <string name="ooc">OOC</string>
    <string name="log">Log</string>
    <string name="music">Music</string>
    <string name="areas">Areas</string>
    <string name="remember_me">Remember Me</string>
    <string name="enter_message">Enter message</string>
    <string name="loop">Loop</string>
    <string name="play">Play</string>
    <string name="go">Go</string>
    <string name="you_are_here">You are here</string>
    <string name="master_connect_failed">Failed to connect to master</string>
    <string name="continue_without_as">Continuing without AS connection...</string>
    <string name="not_connected_yet">Not connected yet</string>
    <string name="server_connect_failed">Failed to connect to server</string>
    <string name="not_connected_to_master">Not connected to master</string>
    <string name="ignore_music">Ignore music</string>
    <string name="ignore_blips" >Ignore blips</string>
    <string name="ignore_sfx">Ignore Sfx</string>
    <string name="use_username_checkbox">Use Username</string>
    <string name="use_mysteryname_checkbox">Use Mysteryname</string>
</resources>